--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  flutter_spinkit: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
